// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`express integration Controller update req values req.body 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "text/html; charset=utf-8",
  },
  "req": {
    "data": {
      "first": "john",
      "role": "admin",
    },
    "headers": {
      "content-type": "application/json",
    },
    "method": "POST",
  },
  "status": 200,
  "text": "lol",
}
`;

exports[`express integration Controller update req values req.headers 1`] = `
{
  "accept": "application/json",
  "accept-encoding": "gzip, deflate",
  "connection": "close",
  "id": 12,
  "secret-header": "@@@@@@",
}
`;

exports[`express integration Controller update req values req.headers 2`] = `
{
  "header": {
    "connection": "close",
    "content-length": "1",
    "content-type": "text/html; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {
      "accept": "application/json",
    },
    "method": "GET",
  },
  "status": 200,
  "text": "k",
}
`;

exports[`express integration Controller update req values req.params 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "1",
    "content-type": "text/html; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "k",
}
`;

exports[`express integration Controller update req values req.query 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "1",
    "content-type": "text/html; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": "k",
}
`;

exports[`express integration RestController update req values req.body 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "5",
    "content-type": "application/json; charset=utf-8",
  },
  "req": {
    "data": {
      "first": "john",
      "role": "admin",
    },
    "headers": {
      "content-type": "application/json",
    },
    "method": "POST",
  },
  "status": 200,
  "text": ""lol"",
}
`;

exports[`express integration RestController update req values req.headers 1`] = `
{
  "accept": "application/json",
  "accept-encoding": "gzip, deflate",
  "connection": "close",
  "id": 12,
  "secret-header": "@@@@@@",
}
`;

exports[`express integration RestController update req values req.headers 2`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "application/json; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {
      "accept": "application/json",
    },
    "method": "GET",
  },
  "status": 200,
  "text": ""k"",
}
`;

exports[`express integration RestController update req values req.params 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "application/json; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": ""k"",
}
`;

exports[`express integration RestController update req values req.query 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "3",
    "content-type": "application/json; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 200,
  "text": ""k"",
}
`;

exports[`express integration RestController validations req.body 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "125",
    "content-type": "application/json; charset=utf-8",
  },
  "req": {
    "data": {
      "first": "john",
      "last": 123,
    },
    "headers": {
      "content-type": "application/json",
    },
    "method": "POST",
  },
  "status": 400,
  "text": "{"statusCode":400,"error":"Bad Request","message":"/"last/" must be a string","validation":{"source":"body","keys":["last"]}}",
}
`;

exports[`express integration RestController validations req.headers 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "190",
    "content-type": "application/json; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {
      "accept": "application/json",
    },
    "method": "GET",
  },
  "status": 400,
  "text": "{"statusCode":400,"error":"Bad Request","message":"/"accept/" with value /"application/json/" fails to match the required pattern: /xml/","validation":{"source":"headers","keys":["accept"]}}",
}
`;

exports[`express integration RestController validations req.params 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "164",
    "content-type": "application/json; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 400,
  "text": "{"statusCode":400,"error":"Bad Request","message":"/"id/" must only contain alpha-numeric and underscore characters","validation":{"source":"params","keys":["id"]}}",
}
`;

exports[`express integration RestController validations req.query 1`] = `
{
  "header": {
    "connection": "close",
    "content-length": "122",
    "content-type": "application/json; charset=utf-8",
  },
  "req": {
    "data": undefined,
    "headers": {},
    "method": "GET",
  },
  "status": 400,
  "text": "{"statusCode":400,"error":"Bad Request","message":"/"end/" is not allowed","validation":{"source":"query","keys":["end"]}}",
}
`;
